# MedChatGuard

./: .gitattributes  .gitignore  Project Plan.md  README.md  pyproject.toml  start_mlflow.sh
data/: ehr_clean_text.jsonl
data/finetune/: conditions.csv  ehr_clean_text.jsonl  ehr_squad_format.json  imaging_studies.csv  immunizations.csv  medications.csv  organizations.csv  patients.csv  payers.csv
data/preprocessed/: data-00000-of-00001.arrow  dataset_info.json  state.json
data/rag_docs/: conditions.csv  patients.csv
embeddings/: doc_id_mapping.pkl  ehr_faiss_index.faiss  summaries.pkl
finetuned_model/finetuned_model-20250410T081628Z-001/checkpoint-13/: adapter_config.json  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
log/: prompt.txt  response.txt  retrieved_chunks.txt
mlruns/0/: meta.yaml
notebooks/: peft_finetuning_flan.ipynb  peft_finetuning_roberta.ipynb  unsloth_finetuning_gemma.ipynb  unsloth_finetuning_medchatguard.ipynb
output/csv/: allergies.csv  careplans.csv  devices.csv  encounters.csv  payer_transitions.csv  providers.csv  supplies.csv
output/fhir/: hospitalInformation1744270848227.json  practitionerInformation1744270848227.json
output/metadata/: 2025_04_10T07_40_48Z_100_Massachusetts_cc2d5ff8_3e2f_4549_942a_8e5344f03d06.json
src/: app.py  evaluate.py
src/agents/: rag_graph.py  ranker.py  validator.py
src/core/: pipeline.py  pipeline_llm.py  pipeline_qa.py  pipeline_seq2seq.py  pipeline_text2text.py  retrieval.py
src/finetune/: prepare_data.py  train_unsloth.py
src/misc/: faiss_search.py
src/utils/: embedding.py  evaluation.py  guardrails.py  mlflow_logger.py  prepare_data.py  run_synthea_convert.py
(+9 files in other folders)
