[project]
name = "medchatguard"
version = "0.1.0"
description = ""
authors = [
    {name = "danieljames96",email = "danieljames96@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "sentence-transformers (>=4.0.2,<5.0.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "mlflow (>=2.21.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "transformers (>=4.51.1,<5.0.0)",
    "huggingface-hub (>=0.30.2,<0.31.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
